# customer_feedback_platform

./: .gitignore  .vercelignore  README.md  main.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
backend/: README.md  app.py  index.py  main.py  pyproject.toml  requirements-vercel.txt  requirements.txt  run.py
backend/app/: __init__.py  extensions.py  index.py  models.py  security.py  sentiment_analyzer.py
backend/app/core/: config.py  database.py  security.py
backend/app/emails/: templates.py
backend/app/integrations/: __init__.py  email_integration.py  meta_integration.py  tiktok_integration.py  twilio_whatsapp_poll.py  web_monitor.py  whatsapp_integration.py  x_integration.py
backend/app/routes/: api.py  integrations.py  pages.py  views.py
backend/app/routes/api/: __init__.py  _helpers.py  admin.py  analytics.py  auth.py  customers.py  feedback.py  health.py  policies.py  releases.py  replies.py  (+1 more)
backend/app/services/: admin_notifications.py  ai_drafts.py  analytics_time_window.py  anomaly_detection.py  auth_account.py  emailer.py  enterprise_auth.py  enterprise_sso_config.py  feedback_analyzer.py  gemini_client.py  insurance_tags.py  metadata_normalization.py  notification_alerts.py  notification_policy.py  policy_detection.py  prioritization.py  rbac.py  sentiment.py  wordcloud.py
backend/app/templates/: base.html  dashboard.html  submit.html
backend/app/utils/: wordcloud_gen.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_feedback.py
backend/tests/unit/: README.md  test_normalize_source_group.py  test_sentiment_insurance_dataset.py  test_sentiment_insurance_gate.py
(+174 files in other folders)
