[project]
name = "customer-feedback-platform-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "Flask==3.0.3",
  "SQLAlchemy==2.0.36",
  "psycopg2-binary==2.9.10",
  "alembic==1.14.0",
  "python-dotenv==1.0.1",
  "cryptography==43.0.3",
  "passlib[bcrypt]==1.7.4",
  "requests==2.32.3",
  "python-dateutil==2.9.0.post0",
  "flask-cors==4.0.0",
  "flask-limiter==3.8.0",
  "email-validator==2.2.0",
  "argon2-cffi==23.1.0",
  "feedparser==6.0.11",
  "beautifulsoup4==4.12.3",
  "wordcloud==1.9.4",
  "Pillow==10.4.0",
]

[project.optional-dependencies]
# Dev/test tooling
dev = [
  "pytest==8.3.3",
  "pytest-cov==6.0.0",
]

# Optional runtime integrations (can be disabled on serverless cold start)
integrations = [
  "feedparser==6.0.11",
  "beautifulsoup4==4.12.3",
  "google-generativeai==0.8.6",
  "google-genai==1.73.1",
]

# Optional text analytics / assets
nlp = [
  "nltk==3.9.1",
  "textblob==0.18.0.post0",
]
assets = [
  "wordcloud==1.9.4",
  "Pillow==10.4.0",
]

# Heavy ML stack (not suitable for Vercel Functions bundle limits).
ml = [
  "transformers==4.46.1",
  "torch==2.5.1",
]
# Local-only utilities that are easy to add outside serverless.
data = [
  "pandas==2.2.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

# Vercel (Flask) — when the service root is `backend/`, point at the Flask app object.
# See: https://vercel.com/docs/frameworks/backend/flask#exporting-the-flask-application
[tool.vercel]
entrypoint = "main:app"
